18 May 2007 Conditional SSKE feature - Roger Bowler
25 Apr 2007 Rename RSS instruction format as SSF - Roger Bowler
04 Apr 2007 Fix Locate Block & Read BlockId for SCSI tape inadvertently
            broken by 31 Aug 2006 preliminary 3590 support change - Fish
26 Mar 2007 Suppress spurious error messages from hercifc - Greg
25 Mar 2007 Ensure started_mask CPU bit is off for terminating cpu thread - Fish by Greg
20 Mar 2007 Redefine ACC_ and ACCTYPE_ macros - Greg
18 Mar 2007 Simplify MULTIPLE_CONTROLLED_DATA_SPACE tests - Greg
17 Mar 2007 Clarify load_address_space_designator code - Greg
16 Mar 2007 Reduce REGS copying by hscmisc.c - Greg
15 Mar 2007 Fix fba when the fba device is > 4G - Greg
10 Mar 2007 machdep.h updates - Greg
08 Mar 2007 concpy rework - Greg
08 Mar 2007 More tweaks to machdep.h i686 code - Greg
07 Mar 2007 Fix store_dw_i686 - Greg
07 Mar 2007 Fix fetch_dw_i686 - Greg
07 Mar 2007 Remove inline attr from vfetchx/vstorex _full functions - Greg
07 Mar 2007 Fix for SIE'd TPROT - Ivan Warren
06 Mar 2007 Fix ckd RDC response - Greg
27 Feb 2007 PR# misc/87 startup messages fix completion - Kevin Leonard
27 Feb 2007 Fix minor glitch in enhanced symbol substitution - Fish
26 Feb 2007 Extend original print-to-pipe parameter handling to support
            passing parms when path to filename also contains blanks - Fish
25 Feb 2007 Fix het_locate to continue on tapemark - herc_fun [os_390@hotmail.com] by Fish
25 Feb 2007 Fix crash in LCS close if devinit of incomplete group - Fish
18 Feb 2007 Add TIME and NOTIME synonyms for LOGOPT operands - Kevin Leonard
14 Feb 2007 Fix ckd RCD, SNSS, SNSID responses - Greg
13 Feb 2007 Treat DIAG X'9C' same as DIAG X'44' - Fish
08 Feb 2007 Don't log Sense Running State SIGP order - Fish
03 Feb 2007 Fix MVT tape CMDREJ error - Greg Smith
31 Jan 2007 Add LOGOPT init statement and panel command - Kevin Leonard
30 Jan 2007 Decimal Floating Point (DFP) facility - Roger Bowler