@@ -773,6 +773,7 @@ is <A HREF="http://linuxvm.org/">http://linuxvm.org/</A>
 <li>IEEE-Exception-Simulation Facility</li>
 <li>Extract-CPU-Time Facility</li>
 <li>Conditional-SSKE Facility</li>
+<li>Compare-and-Swap-and-Store Facility</li>
 </ul>
 
 <P>The following standard feature has not yet been implemented: </P>
