@@ -1,3 +1,4 @@
+26 May 2007 Compare-and-Swap-and-Store feature - Roger Bowler
 18 May 2007 Conditional SSKE feature - Roger Bowler
 25 Apr 2007 Rename RSS instruction format as SSF - Roger Bowler
 04 Apr 2007 Fix Locate Block & Read BlockId for SCSI tape inadvertently
